--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="card-text">
                 <form class="firstForm" novalidate>
                     <div class="form-group">
-                        <label for="exampleInputEmail1">Email address</label>
+                        <label for="exampleInputEmail1">Username</label>
                         <input type="text" class="form-control form-control-sm" id="exampleInputEmail1" aria-describedby="emailHelp">
                     </div>
                     <div class="form-group">
