--- a/index.html
+++ b/index.html
@@ -7,26 +7,39 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.2/css/bootstrap.min.css">
-    <title>Document</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <title>Al Dave | Japeth</title>
 </head>
 <body>
 <div class="global-container">
     <div class="card login-form">
+        <div  style="display: none" id="pop">
+            <strong>Success!</strong> <br>It Works
+            <button type="button" class="close"  data-dismiss="alert">&times;</button>
+        </div>
         <div class="card-body">
-            <h3 class="card-title text-center">Log in to Al Dave's Website</h3>
             <div class="card-text">
-                <form class="firstForm" novalidate>
+                <form class="firstForm" novalidate >
+                    <div class="avatar"><i class="material-icons">&#xE7FF;</i></div>
+                    <h3 class="card-title text-center">Log in</h3>
                     <div class="form-group">
-                        <label for="exampleInputEmail1">Username</label>
-                        <input type="text" class="form-control form-control-sm" id="exampleInputEmail1" aria-describedby="emailHelp">
+                        <label for="username">Username</label>
+                        <input type="email" class="form-control form-control-sm" id="username" aria-describedby="emailHelp">
                     </div>
                     <div class="form-group">
-                        <label for="exampleInputPassword1">Password</label>
-                        <input type="password" class="form-control form-control-sm" id="exampleInputPassword1">
+                        <label for="password">Password</label>
+                        <input type="password" class="form-control form-control-sm" id="password">
                     </div>
-                    <button type="submit" class="btn btn-primary btn-block">Sign in</button>
+                    <button type="submit" class="btn btn-primary btn-block" >Sign in</button>
                 </form>
             </div>
+        </div>
+        <div style="display: none" id="pop1">
+            <strong>Success!</strong> <br>It Works
+            <button type="button" class="close"  data-dismiss="alert">&times;</button>
         </div>
     </div>
 </div>
