need some improvements

--- a/index.html
+++ b/index.html
@@ -8,17 +8,16 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.2/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <title>Al Dave | Japeth</title>
+    <title>Al Dave</title>
 </head>
 <body>
 <div class="global-container hero">
     <div class="card login-form" style="-webkit-box-shadow: 6px 2px 17px -3px rgba(115,115,115,0.74);">
-        <div  style="display: none" id="pop">
-            <strong>Success!</strong> <br><h4>It Works!</h4>
-            <button type="button" class="close"  data-dismiss="alert">&times;</button>
+        <div id="pop" class="card1">
+            <strong>It Works!!</strong>
+            <button type="button" class="close"  data-dismiss="alert" id="button">&times;</button>
         </div>
         <div class="card-body">
             <div class="card-text">
@@ -36,12 +35,14 @@
                     <button type="submit" class="btn btn-primary btn-block" >Sign in</button>
                 </form>
             </div>
+
         </div>
-        <div style="display: none" id="pop1">
-            <strong>Success!</strong> <br><h4>It Works!</h4>
-            <button type="button" class="close"  data-dismiss="alert">&times;</button>
+        <div  id="pop1" class="card">
+            <strong>It Works!!</strong>
+            <button type="button" class="close"  data-dismiss="alert" id="button1">&times;</button>
         </div>
     </div>
+
 </div>
 <script src="script.js"></script>
 </body>
