change hero to container

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Al Dave</title>
 </head>
 <body>
-<div class="global-container hero">
+<div class="global-container container">
     <div class="card login-form" style="-webkit-box-shadow: 6px 2px 17px -3px rgba(115,115,115,0.74);"> <!-- I put some css here to override the bootstrap   -->
         <div id="pop" class="card1">
             <strong>It Works!!</strong>
