add background image , add some contxt in css, js part

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <title>Al Dave | Japeth</title>
 </head>
 <body>
-<div class="global-container">
-    <div class="card login-form">
+<div class="global-container hero">
+    <div class="card login-form" style="-webkit-box-shadow: 6px 2px 17px -3px rgba(115,115,115,0.74);">
         <div  style="display: none" id="pop">
-            <strong>Success!</strong> <br>It Works
+            <strong>Success!</strong> <br><h4>It Works!</h4>
             <button type="button" class="close"  data-dismiss="alert">&times;</button>
         </div>
         <div class="card-body">
@@ -38,11 +38,11 @@
             </div>
         </div>
         <div style="display: none" id="pop1">
-            <strong>Success!</strong> <br>It Works
+            <strong>Success!</strong> <br><h4>It Works!</h4>
             <button type="button" class="close"  data-dismiss="alert">&times;</button>
         </div>
     </div>
 </div>
-</body>
 <script src="script.js"></script>
+</body>
 </html>
