--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.2/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+
+<!--    css external-->
     <title>Al Dave</title>
 </head>
 <body>
@@ -44,6 +45,51 @@
     </div>
 
 </div>
-<script src="script.js"></script>
+<!--Javascript-->
+<script>
+    // functions ------------------------------------------------------
+    function showMsg(varName)
+    {
+        $("#"+varName).fadeIn('slow', function () {
+            $(this).delay(3200).fadeOut('slow');
+        });
+    }
+    function clearInputs() {
+        document.getElementById("username").value = '';
+        // document.getElementById("username").focus(); // not suitable for mobile
+        document.activeElement.blur();
+        document.getElementById("password").value = '';
+    }
+    function addClass(varName) {
+        let v = document.getElementById(varName);
+        v.classList.add('alert', 'alert-success', 'alert-dismissible', 'fade', 'show', 'alertMsg');
+
+
+    }
+
+    function allFunc(varName) {
+        addClass(varName);
+        showMsg(varName);
+        clearInputs();
+
+    }
+
+    // -------------------------------------------------------
+    if(document.getElementsByClassName('firstForm')[0]) {
+        document.getElementsByClassName('firstForm')[0].onsubmit = function (e) {
+            e.preventDefault();
+            const field = this;
+            let username = field.querySelector('input[type=email]');
+            let pass = field.querySelector('input[type=password]');
+            if ((username.value === 'admin' && pass.value === 'admin')) {
+                allFunc('pop');
+            } else if ((username.value === 'user' && pass.value === 'user')) {
+                allFunc('pop1');
+            } else {
+                alert('Credentials are invalid');
+            }
+        }
+    }
+</script>
 </body>
 </html>
