--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="style.css">
 
 <!--    css external-->
     <title>Al Dave</title>
@@ -46,7 +47,7 @@
 
 </div>
 <!--Javascript-->
-<script>
+<script >
     // functions ------------------------------------------------------
     function showMsg(varName)
     {
